
//  _        _______  _______  _       __________________ _______
// | \    /\(  ___  )(  ____ \( (    /|\__   __/\__   __/(  ___  )
// |  \  / /| (   ) || (    \/|  \  ( |   ) (      ) (   | (   ) |
// |  (_/ / | |   | || |      |   \ | |   | |      | |   | (___) |
// |   _ (  | |   | || | ____ | (\ \) |   | |      | |   |  ___  |
// |  ( \ \ | |   | || | \_  )| | \   |   | |      | |   | (   ) |
// |  /  \ \| (___) || (___) || )  \  |___) (___   | |   | )   ( |
// |_/    \/(_______)(_______)|/    )_)\_______/   )_(   |/     \|

// @authors: free thinkers of the world
//     1. Qua Is X (Ukraine) qua.is.kyiv.ua@gmail.com
//     /add your name here.../

syntax = "proto3";

package message;

service Message {
  rpc Post (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string status_message = 1;
  int32 status_code = 2;
}